--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/bahrus/co-depends#readme",
   "dependencies": {
-    "xtal-latx": "0.0.76"
+    "xtal-latx": "0.0.76",
+    "deframe": "0.0.10"
   },
   "devDependencies": {
     "jiife": "0.0.8"
