--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "es2017",
-		"module":"ES6",
+		"target": "esnext",
+		"module":"esnext",
 		"sourceMap": true,
 		"experimentalDecorators": true,
 		"strict": true,
