--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/bahrus/co-depends#readme",
   "dependencies": {
     "xtal-latx": "0.0.82",
-    "deframe": "0.0.10"
+    "deframe": "0.0.10",
+    "h2h-tf": "0.0.3"
   },
   "devDependencies": {
     "jiife": "0.0.8"
