--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "esnext",
 		"module":"esnext",
-		"sourceMap": true,
+		"sourceMap": false,
 		"experimentalDecorators": true,
 		"strict": true,
 		"newLine": "LF"
