--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "trans-render": "0.0.660",
     "xtal-element": "0.0.552",
     "be-ferried": "0.0.45",
+    "be-headed": "0.0.3",
     "be-importing": "0.0.55",
     "be-definitive": "0.0.89" 
   },
