--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 	"files": [
 		"responsive-honeycomb/make.ts",
 		"nested-dropdown/make.ts",
-		"css-marquee-logo-wall/make.ts"
+		"css-marquee-logo-wall/make.ts",
+		"animated-star-rating/make.ts"
 	],
 	"exclude":[
 		"node_modules"
