--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "trans-render": "0.0.664",
     "xtal-element": "0.0.554",
     "be-bound": "0.0.6",
+    "be-definitive": "0.0.92",
     "be-ferried": "0.0.46",
     "be-headed": "0.0.3",
     "be-importing": "0.0.57",
-    "be-definitive": "0.0.92" 
+    "be-scoped": "0.0.1"
   },
   "devDependencies": {
     "@skypack/package-check": "0.2.2",
