--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "be-ferried": "0.0.47",
     "be-hive": "0.0.107",
     "be-importing": "0.0.63",
+    "be-linked": "0.0.27",
     "be-scoped": "0.0.14",
     "trans-render": "0.0.691",
     "xtal-element": "0.0.569"
